--- a/fever/firewall/app/views/default/styles/shared.css
+++ b/fever/firewall/app/views/default/styles/shared.css
@@ -13,6 +13,7 @@ body
 	color: #333;
 	font: 10px/16px Helvetica, Arial, sans-serif;
 	min-height: 100%;
+	text-rendering: optimizeLegibility;
 }
 
 a
