--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -5,7 +5,7 @@
 
 #nat {
    width: 397px;
-   height: 640px;
+   height: 560px;
    background-image: url('../../images/natcplug.jpg');
    color: #444;
    padding-top: 80px;
@@ -31,6 +31,15 @@
 }
 
 #first {
-   margin-top: 0;
+   margin-top: 30px;
+}
+
+#knight {
+   font-size: 0.8em;
+}
+
+.tel, a, a:visited {
+  color: #657383;
+  text-decoration: none;
 }
 
