--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -28,11 +28,15 @@ body, select, input, textarea {
    font-size: 1.2em;
 }
 
-#data {
+.data {
    font-family: 'Droid Sans', sans-serif;
    float: right;
    padding: 0 0 0 10px;
    width: 350px;
+}
+
+#data2, #data3, #data4 {
+   display: none;
 }
 
 #friends {
