--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -74,16 +74,15 @@ p, ul {
 }
 
 #link-blog { }
+#link-code { }
+#link-delicious { }
+#link-friends { }
+#link-github { display: none; }
+#link-homepage { display: none; }
+#link-key { }
+#link-lastfm { }
+#link-linkedin { }
 #link-photos { }
 #link-resume { }
-#link-linkedin { }
-#link-github { }
 #link-twitter { }
-#link-lastfm { }
-#link-delicious { }
-#link-key { }
-#link-friends { }
-#link-homepage {
-   display: none;
-}
 
