Change konami code result on site.

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -20,6 +20,10 @@ body, select, input, textarea {
    font-family: 'Cardo', arial, serif;
 }
 
+#container {
+   background: #fff;
+}
+
 #name {
    font-size: 3em;
 }
