--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1,15 +1,15 @@
 /**
  * NatWelch.com version 7.1
- * copyright nat welch 2011
+ * copyright Nat Welch 2011
  */
 
-body, select, input, textarea { 
+body, select, input, textarea {
    color:#444;
    font-family: 'Droid Sans', sans-serif;
 }
 
 body {
-   background: #778;
+   background: #AAA;
 }
 
 h1, h2, h3, h4, h5 {
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5 {
 
 #nat {
    width: 397px;
-   height: 560px;
+   height: 380px;
    background-image: url('../../images/natcplug.jpg');
    color: #444;
    padding-top: 80px;
@@ -43,8 +43,8 @@ h1, h2, h3, h4, h5 {
 .data {
    font-family: 'Droid Sans', sans-serif;
    float: right;
-   padding: 0 0 0 10px;
-   width: 350px;
+   padding: 25px 20px 0 10px;
+   width: 440px;
 }
 
 #data2, #data3, #data4 {
@@ -57,9 +57,13 @@ h1, h2, h3, h4, h5 {
    margin: 0 auto;
 }
 
+#friends ul {
+   list-style: none;
+}
+
 #container {
-   height: 640px;
-   width: 800px;
+   height: 460px;
+   width: 900px;
    margin: 60px auto 30px;
    border: 10px solid #444444;
    padding: 5px;
