--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5 {
 #nat {
    width: 397px;
    height: 380px;
-   background-image: url('../../images/natcplug.jpg');
+   background-image: url('../../images/natcplug.close.jpg');
    color: #444;
    padding-top: 80px;
    padding-left: 30px;
