--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -173,3 +173,16 @@ p, ul {
 #code_bottom_right a {
    font-size: 1.0em;
 }
+
+#photos {
+   list-style: none;
+   text-align: justify;
+   padding: 0;
+   margin: 0;
+}
+
+#photos li {
+   display: inline;
+   margin: 0;
+   padding: 0;
+}
