--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -18,9 +18,9 @@ h1, h2, h3, h4, h5 {
 
 #box {
    width: 708px;
-   background: grey;
-   opacity: 0.7;
-   margin: 90px auto;
+   background-color: #909090;
+   opacity: 0.8;
+   margin: 100px auto;
    border-radius: 15px;
    padding: 15px;
 }
