--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -52,3 +52,17 @@ body {
 p, ul {
    padding: 5px 0;
 }
+
+#melinks {
+   list-style: none;
+}
+
+ul#melinks li {
+   display: inline;
+}
+
+img.socialicon {
+   width: 100px;
+   height: 100px;
+   border: 1px solid black;
+}
