Change background of website.

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -11,7 +11,7 @@ body, select, input, textarea {
 }
 
 body {
-   background: url("/i/soft.png");
+   background: url("/i/grunge_wall.png");
 }
 
 #box {
