--- a/includes/css/new.css
+++ b/includes/css/new.css
@@ -3,17 +3,46 @@
  * copyright Nat Welch 2013
  */
 
-* { padding: 0; margin: 0; }
-body { background-color: #333; }
-p { color: #fff; font-family: Helvetica; font-size: 16px; line-height: 24px; margin-bottom: 22px; -webkit-font-smoothing: antialiased; }
-a { color: #fff; font-weight: bold; text-decoration: none; border-bottom: 1px solid rgba(255,255,255,0.3); }
-a:hover { color: #990000; border-bottom: 1px solid rgba(255,255,255,1); }
-#monogram { width: 50px; padding: 50px 0 0 0; margin: 0 auto 0 50px; }
-#about { width: 360px; padding: 0 0 0 150px; margin: -35px 50px 0 auto !important; }
-@media (max-width: 767px) {
-  #monogram { position: relative; width: auto; padding: 20px; margin: 0; }
-  #about { position: relative; width: auto; padding: 20px; margin: 0 !important; }
-  background-image { opacity: 0.2; }
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #333;
+}
+
+p {
+  color: #fff;
+  font-family: Helvetica;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 22px;
+  -webkit-font-smoothing: antialiased;
+}
+
+a {
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  border-bottom: 1px solid rgba(255,255,255,0.3);
+}
+
+a:hover {
+  color: #1D3958;
+  border-bottom: 1px solid rgba(255,255,255,1);
+}
+
+#monogram {
+  width: 50px;
+  padding: 50px 0 0 0;
+  margin: 0 auto 0 50px;
+}
+
+#about {
+  width: 400px;
+  padding: 0 0 0 150px;
+  margin: -50px 50px auto -20px !important;
 }
 
 .gravatar {
@@ -21,4 +50,24 @@ a:hover { color: #990000; border-bottom: 1px solid rgba(255,255,255,1); }
   width: 36px;
   border-radius: 18px;
   margin-right: 9px;
+}
+
+@media (max-width: 767px) {
+  #monogram {
+    position: relative;
+    width: auto;
+    padding: 20px;
+    margin: 0;
+  }
+
+  #about {
+    position: relative;
+    width: auto;
+    padding: 20px;
+    margin: 0 !important;
+  }
+
+  background-image {
+    opacity: 0.2;
+  }
 }
