--- a/includes/css/new.css
+++ b/includes/css/new.css
@@ -10,27 +10,15 @@
 
 body {
   background-color: #333;
-  color: #fff;
-  font-family: Helvetica;
 }
 
 p {
+  color: #fff;
+  font-family: Helvetica;
   font-size: 16px;
   line-height: 24px;
   margin-bottom: 22px;
   -webkit-font-smoothing: antialiased;
-}
-
-ul.nav {
-  list-style: none;
-  padding: 10px;
-}
-
-ul.nav li {
-  display: inline-block;
-  padding-right: 10px;
-  font-size: 16px;
-  line-height: 24px;
 }
 
 a {
@@ -51,25 +39,13 @@ a:hover {
   margin: 0 auto 0 50px;
 }
 
-#nav {
-  margin-top: -43px;
-}
-
 #about {
-}
-
-#projects {
-}
-
-.block {
   width: 430px;
   padding: 0 0 0 150px;
-  margin-right: 50px;
-  margin-bottom: auto;
-  margin-left: -20px;
+  margin: -50px 50px auto -20px !important;
 }
 
-.block p {
+#about p {
   background-color: #333;
   padding: 10px;
 }
@@ -81,12 +57,6 @@ a:hover {
   margin-right: 9px;
 }
 
-#fixed {
-  position: fixed;
-  top: 14px;
-  left: 70px;
-}
-
 @media (max-width: 767px) {
   #monogram {
     position: relative;
@@ -95,7 +65,7 @@ a:hover {
     margin: 0;
   }
 
-  .block {
+  #about {
     position: relative;
     width: auto;
     padding: 20px;
