--- a/css/new.css
+++ b/css/new.css
@@ -3,6 +3,8 @@
  * copyright Nat Welch 2013
  */
 
+@import url(//fonts.googleapis.com/css?family=Montserrat:400,700);
+
 * {
   padding: 0;
   margin: 0;
@@ -33,46 +35,64 @@ a:hover {
   border-bottom: 1px solid rgba(255,255,255,1);
 }
 
-#monogram {
-  width: 50px;
-  padding: 50px 0 0 0;
-  margin: 0 auto 0 50px;
+h1.name-plate {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3em;
 }
 
-#about {
-  width: 430px;
-  padding: 0 0 0 150px;
-  margin: -50px 50px auto -20px !important;
+h1.name-plate span {
+  cursor: default;
+  display: inline-block;
 }
 
-#about p {
-  background-color: #333;
-  padding: 10px;
+h1.name-plate span:hover {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: bounce;
+  animation-name: bounce;
 }
 
-.gravatar {
-  height: 36px;
-  width: 36px;
-  border-radius: 18px;
-  margin-right: 9px;
+h1.name-plate span.char4, h1.name-plate span.char4:hover {
+  display: inline;
+  -webkit-animation-name: none;
+  animation-name: none;
 }
 
-@media (max-width: 767px) {
-  #monogram {
-    position: relative;
-    width: auto;
-    padding: 20px;
-    margin: 0;
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
   }
 
-  #about {
-    position: relative;
-    width: auto;
-    padding: 20px;
-    margin: 0 !important;
+  40% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
   }
 
-  background-image {
-    opacity: 0.2;
+  60% {
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  40% {
+    -webkit-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+
+  60% {
+    -webkit-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
+    transform: translateY(-15px);
   }
 }
