--- a/css/new.css
+++ b/css/new.css
@@ -15,12 +15,10 @@ body {
   color: ghostwhite;
 }
 
-p {
-  color: #fff;
+p, .text {
   font-family: Helvetica;
   font-size: 16px;
-  line-height: 24px;
-  margin-bottom: 22px;
+  line-height: 1.4em;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -32,8 +30,16 @@ a {
 }
 
 a:hover {
-  color: #607890;
   border-bottom: 1px solid rgba(255,255,255,1);
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  margin: 0.5em 1em;
+
 }
 
 .content {
@@ -56,6 +62,7 @@ h1 {
   padding: 15px;
   text-align: justify;
   border-radius: 13px;
+  margin-top: 15px;
 }
 
 h1.name-plate {
