--- a/css/new.css
+++ b/css/new.css
@@ -15,11 +15,12 @@ body {
   color: ghostwhite;
 }
 
-p, .text {
-  font-family: Helvetica;
-  font-size: 16px;
-  line-height: 1.4em;
-  -webkit-font-smoothing: antialiased;
+h1 {
+  color: #8F89B2;
+}
+
+.text {
+  background-color: #8F89B2;
 }
 
 a {
@@ -33,19 +34,24 @@ a:hover {
   border-bottom: 1px solid rgba(255,255,255,1);
 }
 
+p, .text {
+  font-family: Helvetica;
+  font-size: 16px;
+  line-height: 1.4em;
+  -webkit-font-smoothing: antialiased;
+}
+
 ul {
   list-style: none;
 }
 
 li {
   margin: 0.5em 1em;
-
 }
 
 .content {
   width: 60%;
   margin: 45px auto;
-  background-color: deepskyblue;
   padding: 20px;
   opacity: 0.9;
   border-radius: 13px;
@@ -58,7 +64,6 @@ h1 {
 
 .text {
   opacity: 1;
-  background-color: #808080;
   padding: 15px;
   text-align: justify;
   border-radius: 13px;
