--- a/css/new.css
+++ b/css/new.css
@@ -16,11 +16,11 @@ body {
 }
 
 h1 {
-  color: #8F89B2;
+  color: #896060;
 }
 
 .text {
-  background-color: #8F89B2;
+  background-color: #896060;
 }
 
 a {
