--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,14 @@ h1 {
   width: 45%;
 }
 
+.gravatar {
+  margin: 12px auto 0 -60px;
+  float: left;
+  clear: both;
+  height: 36px;  width: 36px;
+  border-radius: 18px;
+}
+
 h1.name-plate {
   font-family: 'Montserrat', sans-serif;
   font-size: 3em;
