--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,41 @@
 body {
   background-color: #F2F6ED;
 }
+
+.content {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 1.4444rem;
+}
+
+.logo {
+  background-color: #FFF;
+  border: 10px black solid;
+  margin: 1em;
+  padding: 7px 0;
+}
+
+ul.sentence {
+  padding: 0;
+  margin: 0;
+  text-align: left;
+  display: inline;
+  list-style: none;
+}
+
+ul.sentence li {
+  display: inline;
+  margin: 0;
+}
+
+ul.sentence li:after {
+  content: ", ";
+}
+
+ul.sentence li:last-child:after {
+  content: ".";
+}
+
+ul.sentence li:nth-last-child(2):after {
+  content: " & ";
+}
