--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,5 @@
 /* https://fonts.google.com/featured/Superfamilies */
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
-
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i");
 
 body,
 p,
