--- a/css/base.css
+++ b/css/base.css
@@ -1,10 +1,12 @@
 /* https://fonts.google.com/featured/Superfamilies */
-@import url("https://fonts.googleapis.com/css?family=Oxygen:300,400|Roboto:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700");
 
 body,
 p,
 .normal {
+  background-color: #eeeceb;
   font-family: "Roboto", sans-serif;
+  color: #443e3c;
 }
 
 h1,
@@ -12,7 +14,7 @@ h2,
 h3,
 h4,
 .header {
-  font-family: "Oxygen", serif;
+  font-family: "Roboto", sans-serif;
 }
 
 p {
