change link color

--- a/css/base.css
+++ b/css/base.css
@@ -26,7 +26,7 @@ a:link,
 a:visited {
   text-decoration: none;
   transition: color 0.4s;
-  color: #9fb5cc;
+  color: #07c;
   cursor: pointer;
 }
 
